--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-disponibilidad-presupuesto/components/validar/validar.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-disponibilidad-presupuesto/components/validar/validar.component.html
@@ -31,15 +31,15 @@
     <mat-expansion-panel class="expansion-style" *ngFor="let disponibilidad of listaDisponibilidades">
       <mat-expansion-panel-header class="expansion-style--header"
       *ngIf="listaestado.includes(disponibilidad.nombreEstado)">
-        <mat-panel-title class="expansion-style--title " 
+        <mat-panel-title class="expansion-style--title "
           [ngClass]="{'sin-diligenciar':disponibilidad['class']===0,'en-proceso':disponibilidad['class']===1,'completo':disponibilidad['class']===2}"><!----->
-          {{disponibilidad.nombreEstado}} 
+          {{disponibilidad.nombreEstado}}
         </mat-panel-title>
       </mat-expansion-panel-header>
       <app-tabla-en-validacion [disponibilidadPresupuestal]="disponibilidad" *ngIf="disponibilidad.nombreEstado=='En validación presupuestal'"></app-tabla-en-validacion>
       <app-tabla-devuelta-por-coordinacion [disponibilidadPresupuestal]="disponibilidad" *ngIf="disponibilidad.nombreEstado=='Devuelta por coordinación financiera'"></app-tabla-devuelta-por-coordinacion>
       <app-tabla-devuelta-por-validacion [disponibilidadPresupuestal]="disponibilidad" *ngIf="disponibilidad.nombreEstado=='Devuelta por validación presupuestal'"></app-tabla-devuelta-por-validacion>
-      <app-tabla-con-validacion [disponibilidadPresupuestal]="disponibilidad" *ngIf="disponibilidad.nombreEstado=='Con validación presupuestal' || disponibilidad.nombreEstado=='Con disponibilidad presupuestal'"></app-tabla-con-validacion>
+      <app-tabla-con-validacion [disponibilidadPresupuestal]="disponibilidad" *ngIf="disponibilidad.nombreEstado=='Con validación presupuestal' || disponibilidad.nombreEstado=='Con disponibilidad presupuestal'" [esGenerar] = "disponibilidad.nombreEstado=='Con disponibilidad presupuestal' ? true : false"></app-tabla-con-validacion>
       <app-tabla-rechasada-por-validacion [disponibilidadPresupuestal]="disponibilidad" *ngIf="disponibilidad.nombreEstado=='Rechazada por validación presupuestal'"></app-tabla-rechasada-por-validacion>
       <app-tabla-con-disponibilidad-cancelada [disponibilidadPresupuestal]="disponibilidad" *ngIf="disponibilidad.nombreEstado=='Con disponibilidad cancelada'"></app-tabla-con-disponibilidad-cancelada>
     </mat-expansion-panel>
@@ -60,7 +60,7 @@
         <mat-panel-title class="expansion-style--title sin-diligenciar">
           Devuelta por coordinación financiera
         </mat-panel-title>
-      </mat-expansion-panel-header> 
+      </mat-expansion-panel-header>
       <app-tabla-devuelta-por-coordinacion></app-tabla-devuelta-por-coordinacion>
     </mat-expansion-panel>
     <mat-expansion-panel class="expansion-style">
