--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/form-orden-giro-seleccionada/form-orden-giro-seleccionada.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/form-orden-giro-seleccionada/form-orden-giro-seleccionada.component.html
@@ -25,7 +25,7 @@
         <strong>Valor pagado: </strong
         ><em>
           {{
-            solicitudPago.ordenGiro.ordenGiroDetalle[0].ordenGiroDetalleTerceroCausacion[0].valorNetoGiro
+            valorTotalPagado
               | currency: '':'symbol-narrow':'.0-0'
           }}
         </em>
