--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-disponibilidad-presupuestal/components/gestionar-ddp/gestionar-ddp.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-disponibilidad-presupuestal/components/gestionar-ddp/gestionar-ddp.component.html
@@ -358,7 +358,7 @@
     </mat-accordion>
 
     <div class="botones">
-        <button mat-raised-button color="accent" (click)="generarddp()">Generar DDP</button>
+        <button mat-raised-button color="accent" [disabled]="!validarBotonGenerarDDp(detailavailabilityBudget?.proyectos)" (click)="generarddp()">Generar DDP</button>
         <!-- <button mat-raised-button color="accent">Actualizar DDP</button> -->
         <button mat-raised-button color="accent" (click)="openDialogDevolver()">Devolver a <br> validación
             financiera</button>
