--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/tercero-causacion-gog/tercero-causacion-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/tercero-causacion-gog/tercero-causacion-gog.component.html
@@ -297,7 +297,7 @@
                                                     class="btn-eliminar"
                                                     *ngIf="getAportantes( i, j ).length > 1"
                                                     (click)="deleteAportante( i, j, k )">
-                                                    <img src="assets/img/icon/menos.svg" alt="Eliminar radicado">
+                                                    <img src="assets/img/icon/menos.svg" alt="Eliminar aportante">
                                                     Eliminar aportante
                                             </button>
                                         </div>
