--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-disponibilidad-presupuestal/components/detalle-con-validacion-presupuestal/detalle-con-validacion-presupuestal.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-disponibilidad-presupuestal/components/detalle-con-validacion-presupuestal/detalle-con-validacion-presupuestal.component.html
@@ -374,7 +374,7 @@
         -->
     </mat-accordion>
 
-    <div class="botones">
+    <div class="botones" *ngIf="esCancelada != true">
         <button mat-raised-button color="accent" (click)="generarddp()">Descargar DDP</button>
     </div>
 
