GetTablaUsoFuenteAportanteXContratoId add pProyectoId

--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/recursos-comprom-accord-gbftrec/recursos-comprom-accord-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/recursos-comprom-accord-gbftrec/recursos-comprom-accord-gbftrec.component.html
@@ -55,4 +55,4 @@
   </table>
 </div>
 
-<app-fuentes-usos-gbftrec *ngIf="contratoId" [contratoId]="contratoId"></app-fuentes-usos-gbftrec>
+<app-fuentes-usos-gbftrec *ngIf="contratoId" [contratoId]="contratoId" [pProyectoId]="proyectoId"></app-fuentes-usos-gbftrec>
