--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-descuentos-gog/form-descuentos-gog.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-orden-giro/components/form-descuentos-gog/form-descuentos-gog.component.html
@@ -42,6 +42,10 @@
                                             <div formArrayName="conceptos" *ngFor="let concepto of getConceptos( i, j ).controls; index as k">
                                                 <h2 class="card-subTitle mt-1em"> {{ firstLetterUpperCase( concepto.get( 'nombre' ).value ) }} </h2>
                     
+                                                <pre>
+                                                    {{ conceptoconcepto.value | json }}
+                                                </pre>
+
                                                 <div [formGroup]="concepto" *ngIf="getAportantes( i, j, k ).length > 0">
                                                     <div formArrayName="aportantes" *ngFor="let aportante of getAportantes( i, j, k ).controls; index as l">
                                                         <mat-card-title class="header-card--text mt-1em" *ngIf="aportante.get( 'tipoAportante' ).value !== null"> Aportante {{ l + 1 }} </mat-card-title>
@@ -150,7 +154,11 @@
                                         <div *ngIf="getConceptos( i, j ).length > 0">
                                             <div formArrayName="conceptos" *ngFor="let concepto of getConceptos( i, j ).controls; index as k">
                                                 <h2 class="card-subTitle mt-1em"> {{ firstLetterUpperCase( concepto.get( 'nombre' ).value ) }} </h2>
-                    
+
+                                                <pre>
+                                                    {{ concepto.value | json }}
+                                                </pre>
+
                                                 <div [formGroup]="concepto" *ngIf="getAportantes( i, j, k ).length > 0">
                                                     <div formArrayName="aportantes" *ngFor="let aportante of getAportantes( i, j, k ).controls; index as l">
                                                         <mat-card-title class="header-card--text mt-1em"> Aportante {{ l + 1 }} </mat-card-title>
