--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-criterios-pago/form-criterios-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-criterios-pago/form-criterios-pago.component.html
@@ -159,11 +159,11 @@
               <div class="col-md-12">
                 <div class="row">
                   <div class="pr-1">
-                    <label class="label-left" for="pConceptoPagoCodigo"
+                    <label class="label-left" for="usoCodigo"
                     [ngClass]="{
                       'color-secondaryColor':
-                        (criterio.get('pConceptoPagoCodigo').invalid && criterio.get('pConceptoPagoCodigo').touched) ||
-                        (criterio.get('pConceptoPagoCodigo').invalid && estaEditando)
+                        (criterio.get('usoCodigo').invalid && criterio.get('usoCodigo').touched) ||
+                        (criterio.get('usoCodigo').invalid && estaEditando)
                     }">
                       Uso para el concepto de pago
                   </label>
@@ -171,7 +171,7 @@
                   <div class="col">
                     <mat-form-field class="select-width">
                       <mat-select
-                        formControlName="pConceptoPagoCodigo"
+                        formControlName="usoCodigo"
                         (selectionChange)="getvaluesConcepto( criterio.get('conceptoPago').value, i, criterio.get('tipoCriterioCodigo')?.value, $event.value )"
                       >
                         <mat-option *ngFor="let uso of usosParaElConceoto" [value]="uso.codigo">
@@ -189,8 +189,8 @@
                       matTooltip="Debe ingresar la información en el campo para continuar"
                       matTooltipClass="info-tooltip"
                       *ngIf="
-                      (criterio.get('pConceptoPagoCodigo').invalid && criterio.get('pConceptoPagoCodigo').touched) ||
-                      (criterio.get('pConceptoPagoCodigo').invalid && estaEditando)
+                      (criterio.get('usoCodigo').invalid && criterio.get('usoCodigo').touched) ||
+                      (criterio.get('usoCodigo').invalid && estaEditando)
                       "
                     />
                   </span>
