Monto pendiente por facturar

--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-criterios-pago/form-criterios-pago.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-validar-requisitos-pago/components/form-criterios-pago/form-criterios-pago.component.html
@@ -23,7 +23,7 @@
                     <div *ngFor="let concepto of getConceptos( j ).controls">
                         <p><b> {{ concepto.get( 'conceptoPagoCriterioNombre' ).value }} </b></p>
                         <p><b>Uso para el concepto de pago: </b> {{ getUsosParaElConceoto(concepto.get( 'usoCodigo' ).value) }} </p>
-                        <p><b>Monto pendiente por facturar: </b> {{ concepto.get( 'montoMaximo' ).value | currency:'':'symbol-narrow':'.0-0' }} </p>
+                        <!-- <p><b>Monto pendiente por facturar: </b> {{ concepto.get( 'montoMaximo' ).value | currency:'':'symbol-narrow':'.0-0' }} </p> -->
                         <p><b>Valor facturado al concepto:</b> ${{ concepto.get( 'valorFacturadoConcepto' ).value | currency:' ':'symbol-narrow':'.0-0' }} </p>
                     </div>
                     <p><strong>Valor total de los conceptos:</strong> ${{ criterio.get( 'valorFacturado' ).value | currency:' ':'symbol-narrow':'.0-0' }} </p>
